# zbWidgetLib

./: README.md  build.bat  import_icon.py  pyproject.toml  requirements.txt  resources.qrc  test.py  updateRequirements.bat
.github/workflows/: ci.yml  release.yml
script/: config.py  release_build.py
zbWidgetLib/: __init__.py  base.py  func.py  func.pyi  icon.py  page.py  resources_rc.py
zbWidgetLib/base/: base.py  hook.py  icon.py
zbWidgetLib/components/: __init__.py  button.py  card.py  file_chooser.py  flyout.py  image.py  info_badge.py  loading.py  page.py  progress.py  scroll.py  splash_screen.py  widget.py  window.py
